[package]
name = "pty-proxy"
version = "1.1.0"
edition = "2021"

[dependencies]
winpty-rs = { path = "winpty-rs" } # PTY库
toml = "0.8.19" # 配置读取
uuid = { version = "1.12.1", features = ["v4"] } # 唯一标识
windows-sys = { version = "0.59.0", features = [
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_IO",
] } # Windows API

[features]
debug_mode = []
