[package]
name = "pty-proxy"
version = "1.1.5"
edition = "2021"

[dependencies]
winpty-rs = { path = "winpty-rs" } # PTY库
toml = "0.9.2" # 配置读取
uuid = { version = "1.17.0", features = ["v4"] } # 唯一标识
windows-sys = { version = "0.60.2", features = [
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_IO",
] } # Windows API

[features]
color = [] # 启用彩色显示
debug_mode = ["color"]
winpty = ["winpty-rs/winpty"]  # 使用 winpty 模式
conpty = ["winpty-rs/conpty"]  # 使用 conpty 模式